# Scrapy_rep

./: README.md
scrapy_quotes/: pyproject.toml
scrapy_quotes/scrapy_quotes/: config.ini  main.py  models.py  pipelines.py  spider.py  uploads.py
